<resources>
    <string name="app_name">Task Assistant</string>
    <string name="search_hint">Search Task</string>
    <string name="no_task_found">You have no task. Let\'s add some tasks by clicking the plus button below!</string>
    <string name="add_task">Add your new task</string>
    <string name="complete_task">Just to confirm</string>
    <string name="complete_task_msg">Is this task completed?</string>
    <string name="complete">Complete</string>
    <string name="add_task_name_hint">Type your task name..</string>
    <string name="add_task_description_hint">Type your task description..</string>
    <string name="task_name">Name</string>
    <string name="task_description">Description</string>

    // Menu drawer
    <string name="drawer_home">Home</string>
    <string name="drawer_completed">Completed</string>
    <string name="drawer_dashboard">Dashboard</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dashboard">Task Dashboard</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>